--- a/index.html
+++ b/index.html
@@ -1,60 +1,104 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<head>
-<title>Force Editor</title>
-<!-- <script src="js/d3.v2.min.js"></script> -->
-<script src="js/d3.v2.min.js"></script>
-<script src="js/appbase.v2.2.15.min.js"></script>
-<!-- <script src="js/jquery-1.8.3.min.js"></script> -->
-<style>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Sample AppBase app</title>
 
-body {
-  font: 13px sans-serif;
-  position: relative;
-  width: 960px;
-  height: 500px;
-}
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-colorpicker.min.css" rel="stylesheet">
 
-.node {
-  fill: #000;
-  cursor: crosshair;
-}
+    <link href="css/force_view.css" rel="stylesheet">
 
-.node_selected {
-  fill: #ff7f0e;
-  stroke: #ff7f0e;
-}
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="row login hidden">
+      <div class="col-md-12">
+        <center>
+          <h1>Sample AppBase</h1>
+          <button type="button" class="btn btn-primary btn-lg login">Login</button>
+        </center>
+      </div>
+    </div>
+    <div class="row force-view hidden">
+      <div class="btn-group btn-group-justified" role="group" aria-label="...">
+        <div class="btn-group" role="group">
+          <button type="button" class="btn btn-success btn-lg add-node">Add Node</button>
+        </div>
+        <div class="btn-group" role="group">
+          <button type="button" class="btn btn-danger btn-lg remove-all-node">Remove All Nodes</button>
+        </div>
+        <div class="btn-group" role="group">
+          <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#helpModal">Help</button>
+        </div>
+      </div>
+      <div id="chart"></div>
+      <center>
+        <div class="alert alert-info" role="alert">
+         <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
+         <a href="https://github.com/igorlima/sample_appbase_with_d3">Fork me</a>
+         <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
+        </div>
+      </center>
+    </div>
+   
+    <!-- Edit Node Modal -->
+    <div class="modal fade" id="editNodeModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">You're adding a node</h4>
+          </div>
+          <div class="modal-body">
 
-.drag_line {
-  stroke: #999;
-  stroke-width: 5;
-  pointer-events: none;
-}
+            <div class="form-group">
+              <label for="textNode">Text</label>
+              <input type="text" class="form-control" id="textNode" placeholder="Type a text for your node">
+            </div>
+            <div class="form-group">
+              <label for="textColorNode">Text color</label>
+              <input type="text" class="form-control" id="textColorNode" placeholder="Choose a text color">
+            </div>
 
-.drag_line_hidden {
-  stroke: #999;
-  stroke-width: 0;
-  pointer-events: none;
-}
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
-.link {
-  stroke: #999;
-  stroke-width: 5;
-  cursor: crosshair;
-}
+    <!-- Help Modal -->
+    <div class="modal fade" id="helpModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Help</h4>
+          </div>
+          <div class="modal-body">
 
-.link_selected {
-  stroke: #ff7f0e;
-}
+            It's a help
 
-</style>
-<head>
-<body>
-  <!-- http://bl.ocks.org/benzguo/4370043 -->
-  <div id="chart">
-  </div>
-<script src="js/force_view.js"></script>
-<script src="js/login.js"></script>
-</body>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="js/appbase.v2.2.15.min.js"></script>
+    <script data-main="js/main" src="js/require.v2.1.16.min.js"></script>
+  </body>
 </html>
- 
