Add input to search other namespaces

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#helpModal">Help</button>
         </div>
       </div>
+      <input id="observe-someone-else" type="text" class="form-control hidden" placeholder="Type for searching who you can observe" aria-describedby="basic-addon1">
       <div id="chart"></div>
       <center>
         <div class="alert alert-info" role="alert">
