Add an option to ENTER without login

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       <div class="col-md-12">
         <center>
           <h1>Sample AppBase</h1>
-          <button type="button" class="btn btn-primary btn-lg login">Login</button>
+          <button type="button" class="btn btn-primary btn-lg login">Facebook Login</button>
+          <button type="button" class="btn btn-primary btn-lg enter">Enter</button>
         </center>
       </div>
     </div>
@@ -90,7 +91,9 @@
           </div>
           <div class="modal-body">
 
-            It's a help
+            Drag from an existing node to add a new node or link. Click to select/deselect nodes/links. Hit the DELETE key to remove the selected node or link. Drag to pan. Scroll to zoom.
+            <br>
+            Double click to edit the node content.
 
           </div>
           <div class="modal-footer">
@@ -99,7 +102,7 @@
         </div>
       </div>
     </div>
-    <script src="js/appbase.v2.2.15.min.js"></script>
+    <script src="js/appbase.v2.2.16.min.js"></script>
     <script data-main="js/main" src="js/require.v2.1.16.min.js"></script>
   </body>
 </html>
