Rename button labels

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
       <div class="col-md-12">
         <center>
           <h1>Sample AppBase</h1>
-          <button type="button" class="btn btn-primary btn-lg login">Facebook Login</button>
-          <button type="button" class="btn btn-primary btn-lg enter">Enter</button>
+          <button type="button" class="btn btn-primary btn-lg enter">Enter via <i>appsecret identifier</i></button>
+          <span>or</span>
+          <button type="button" class="btn btn-primary btn-lg login">Enter via Facebook Auth</button>
         </center>
       </div>
     </div>
